items abrir contenedor

--- a/Prototipo2P/src/ventanas/MDI.form
+++ b/Prototipo2P/src/ventanas/MDI.form
@@ -11,7 +11,17 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jMenuItem1"/>
+                <Property name="text" type="java.lang.String" value="MantenimientoEmpleado"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="MantenimientoClientes"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="MantenimientoPuesto"/>
               </Properties>
             </MenuItem>
           </SubComponents>
